# yctrl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  devshell.toml  flake.nix
.github/workflows/: build_nix.yml  cliff.toml  release.yml
src/: config.rs  constants.rs  handlers.rs  loop.rs  main.rs  models.rs  runtime.rs  scratchpad.rs  state.rs  util.rs  yabai.rs
src/event/: mod.rs  types.rs
src/handlers/: space_event.rs  window_event.rs
src/runtime/: space_event.rs  window_event.rs
src/yabai/: events.rs  mod.rs  models.rs  socket.rs
