[package]
name = "yctrl"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository="https://github.com/tami5/yctrl"
readme = "README.md"
description = "Thin wrapper around yabai that adds convenient and intuitive fixes"
keywords = [
  "macos",
  "yabai",
  "window_manager",
  "cli",
]

[dependencies]
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.17.0", features = ["full"]  }
tracing = "0.1"
tracing-subscriber = { version = "0.2" }
