[package]
name = "yctrl"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository="https://github.com/kkharji/yctrl"
readme = "README.md"
description = "Thin wrapper around yabai that adds convenient and intuitive fixes"
keywords = [
  "macos",
  "yabai",
  "window_manager",
  "cli",
]

[dependencies]
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.17.0", features = ["full"]  }
tracing = "0.1"
tracing-subscriber = { version = "0.2" }
async-trait = "0.1.52"
rand = "0.8.5"
